$Id$
            
            [- Version 2.1.14 -]
2006-05-23: Fixed bug in definition of 'setter' (setter.lisp), and
            reversed order of args to setter (and hence to
            ^-this-val and <-this-val).

            [- Version 2.1.12 2006/05/22 12:08:37 airfoyle Exp -]
2006-05-21  Introduced 'matches' = 'matchq' with args reversed

            [- Version 2.1.9c 2006/05/20 01:44:24 airfoyle Exp -]
2006-05-18  Created ytcopy.lisp: Utilities for creating tar files and copying
            to cyndra.  (Yes, the name of the server is hard-wired.
            Sigh.) 

            [- Version 2.1.9b -] -- sourceforge CVS site down
2006-05-16  Streamlined "start over" hack in ytload, dispensing with
            :start-over argument and just making :start-over a
            possible value of :if-installed.

            [- Version 2.1.9a -] 
2006-05-15  Utilities moved from chunk-system code to util.lisp .  It
            should be possible to avoid loading chunk system at all.

            Added ?(:check e1 ... eK) to setter.  Matches if all e's
            evaluate to true.  

            [- Version 2.1.9 -]
2006-04-10: Added 'setter' to setter.lisp.  (setter <place>) returns
            a function of two args.  (>< (setter p) v fcn) is
            the same as (!= p (>< fcn v *-*)).  The two functions
            <-this-val and ^-this-val are defined to be used with
            setter; they ignore the second arg.

            [- Version 2.1.8 2006/01/22 15:38:50 airfoyle Exp -]
2006-01-13: Defined (>< e -args-) as synonym for (funcall e -args-)

            [- Version 2.1.6 -]
2006-01-10: Define '_' as a symbol macro that expands to 'nil'.

            [- Version 2.1.5 2005/12/30 19:16:24 airfoyle Exp -]
2005-12-30: When installing YTools, if YTFM is not yet installed, user
            is queried whether it should be installed, but is no
            longer asked the confusing question about whether YTFM